overflow bug fix

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,12 +1,4 @@
 @import "./base.css";
-
-#app {
-  max-width: 1280px;
-  margin: 0;
-  width: 100%;
-  font-weight: normal;
-}
-
 a,
 .green {
   text-decoration: none;
